# ChangeLog for x11-misc/xtermcontrol
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xtermcontrol/ChangeLog,v 1.19 2007/11/15 17:08:52 drac Exp $

*xtermcontrol-2.9 (15 Nov 2007)

  15 Nov 2007; Samuli Suominen <drac@gentoo.org> xtermcontrol-2.8.ebuild,
  +xtermcontrol-2.9.ebuild:
  Version bump, and marking 2.8 stable on amd64.

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove pfeifer from metadata.xml due to retirement.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  21 Oct 2006; Aron Griffis <agriffis@gentoo.org> xtermcontrol-2.8.ebuild:
  Mark 2.8 stable on alpha/ia64

*xtermcontrol-2.8 (05 Mar 2006)

  05 Mar 2006; Aron Griffis <agriffis@gentoo.org> -xtermcontrol-2.4.ebuild,
  +xtermcontrol-2.8.ebuild:
  Bump to 2.8 (from 2.7).  Remove 2.4

  19 Jan 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xtermcontrol-2.7.ebuild:
  Fix for modular X, and do a little ebuild cleanup.

  20 Jun 2005; Aron Griffis <agriffis@gentoo.org> xtermcontrol-2.7.ebuild:
  stable on alpha amd64 ia64 x86

  20 Jun 2005; Aron Griffis <agriffis@gentoo.org> xtermcontrol-2.4.ebuild:
  stable on alpha amd64

*xtermcontrol-2.7 (10 May 2005)

  10 May 2005; Jay Pfeifer <pfeifer@gentoo.org> +xtermcontrol-2.7.ebuild:
  Version bump.

  09 Apr 2005; Simon Stelling <blubb@gentoo.org> xtermcontrol-2.4.ebuild:
  added ~amd64

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> xtermcontrol-2.4.ebuild:
  stable on ia64

  18 Mar 2005; Mike Gardiner <obz@gentoo.org> xtermcontrol-2.4.ebuild:
  Keyworded ppc

  08 Feb 2005; Aron Griffis <agriffis@gentoo.org> xtermcontrol-2.4.ebuild:
  Add ~alpha and ~ia64

  08 Jul 2004; Jay Pfeifer <pfeifer@gentoo.org> xtermcontrol-2.4.ebuild :
  Marked stable on x86.

*xtermcontrol-2.4 (20 May 2004)
  
  20 May 2004; Jay Pfeifer <pfeifer@gentoo.org> xtermcontrol-2.4.ebuild :
  Version bump.
