@@ -3,6 +3,6 @@ DIST xtermcontrol-2.8.tar.gz 129716 RMD160 b1770214c85e569322c08b822cd2b14ab1d84
 DIST xtermcontrol-2.9.tar.gz 131619 RMD160 ec44dfd12b5aa1cd792346d4aebbed073b33d0f8 SHA1 15b2d55dcf4b39844277efce7c9cf95cf6e16aad SHA256 c29686b27076c98a96067cd7a1238a8feed9e21c2ec2cb9689c8be01f4689139
 EBUILD xtermcontrol-2.7.ebuild 573 RMD160 963b49f1aec0d6ecefc98c98427d19d3b8a1bd97 SHA1 faa051a0907ccf97aa1aa5e9401ca3a7dae9febb SHA256 981adaff2ea81b69b452e1c3f03a8f672f5f9f9c65081afdaef31611c9345ce3
 EBUILD xtermcontrol-2.8.ebuild 569 RMD160 61e7794e583a73206315889129fdcd9ec2e00321 SHA1 1b122509e464d13fa02e0179401f3364cefba6d9 SHA256 5eda9d300ad8811d9263426ba37b1b8ac548eb83667fa41f12c8b109b8a6a54c
-EBUILD xtermcontrol-2.9.ebuild 587 RMD160 978b53fae6596fb006a75d930840115ca7536c9c SHA1 6cde0f02d2b66cf76ba9711a71b155b72d06a8dc SHA256 6f7bfdb6e284107fb830e0502414cac6f65d88be80871a26c9330a97321aad46
-MISC ChangeLog 2376 RMD160 9469daccb1ba6c7449a440a3f49a4d40778c0591 SHA1 2144caf52973290d410427245d124d9212e35bcb SHA256 87923423b06b5c9574fc74294cd4c7cba9151b8d2aec33611de69a828e97df09
+EBUILD xtermcontrol-2.9.ebuild 587 RMD160 29eb53281b93f587d9bb491df00ac4050507362a SHA1 9f77105232dd86f2dac2e32e455d511b05405c18 SHA256 b6ddaa286eccfd0155986d1ff0e2f818a5a964d9ec2e5c8b6ecd2129c2253400
+MISC ChangeLog 2490 RMD160 329f1040e94142cc51a1903be3a3df96878366a7 SHA1 1b7cf96b3f84db706a04bcb06d0297a7ef3f0bb8 SHA256 b233b318513dd98ba5ecb59965b9da3d00a3bfe5547bdd4346caefbbde689864
 MISC metadata.xml 615 RMD160 9c1d8817b2f4918e3eb1185b8646ac130027c02c SHA1 bb80cf08ac1c1cffc7a1ea56996435557abd1fdd SHA256 1f7fa979432e659f8410ce238dce09d872aa97e26cf43d3d188b2da54063ccb9
